--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.play:integrity:1.1.0'
+    implementation 'com.google.android.gms:play-services-ads:22.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
 
