--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
+        mavenCentral()  
         jcenter{url "https://jcenter.bintray.com/"}
 
     }
@@ -28,7 +29,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-
+        mavenCentral()
+        
         maven {
             url "https://jitpack.io"
         }
